zoom ui frontend

--- a/server/notetakers/zoom/test.ipynb
+++ b/server/notetakers/zoom/test.ipynb
@@ -645,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fb643eb1",
+   "id": "aa23755d",
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "907115d7",
+   "id": "267690d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7786562b",
+   "id": "cba2ea4b",
    "metadata": {},
    "outputs": [
     {
@@ -793,8 +793,220 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "4f89db8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "34450f98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "our_transcript_format = \"\"\"[{\\\"date\\\": \\\"2024-12-26\\\", \\\"time\\\": \\\"03:19:38\\\", \\\"user\\\": \\\"Heross\\\", \\\"content\\\": \\\"I of\\\"}, {\\\"date\\\": \\\"2024-12-26\\\", \\\"time\\\": \\\"03:19:48\\\", \\\"user\\\": \\\"Heross\\\", \\\"content\\\": \\\"I of 2017 is when I started my podcast, it was 90 days after I lost everything the last time, And from that point until now, it's\\\"}, {\\\"date\\\": \\\"2024-12-26\\\", \\\"time\\\": \\\"03:19:58\\\", \\\"user\\\": \\\"Heross\\\", \\\"content\\\": \\\"I of 2017 is when I started my podcast, it was 90 days after I lost everything the last time, And from that point until now it's taken that period of time to get to over a million dollars a month. It actually three years and I was making multiple podcasts. We're talking three 400 episodes for the first few years,\\\"}, {\\\"date\\\": \\\"2024-12-26\\\", \\\"time\\\": \\\"03:20:08\\\", \\\"user\\\": \\\"Heross\\\", \\\"content\\\": \\\"We're talking three 400 episodes for the first few years, I never really cracked. 3,000 downloads a month and so I could say Man why is this taking so long? But the real real is that it took me that long to get good.\\\"}, {\\\"date\\\": \\\"2024-12-26\\\", \\\"time\\\": \\\"03:20:18\\\", \\\"user\\\": \\\"Heross\\\", \\\"content\\\": \\\"over a million dollars a month. 3,000 downloads a month and so I could say Man, why is this taking so long? But the real real is that it took me that long to get good. It also being extra real took me that long to have proof on the outside. That what I was saying was true on the inside and right now, no new listens to my podcast.\\\"}, {\\\"date\\\": \\\"2024-12-26\\\", \\\"time\\\": \\\"03:20:29\\\", \\\"user\\\": \\\"Heross\\\", \\\"content\\\": \\\"downloads a month and so I could say Man, why is this taking so long? But the real real is that it took me that long to get good. That what I was saying was true on the inside and right now, no one who listens to my podcast cares, that it took me seven years to get here. They just care that. It's good today. People, quit here when things get hard, because the thought of something being hard forever is unbearable.\\\"}]\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "8ebbe3ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "our_transcript_format = json.loads(our_transcript_format)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "e7146467",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'date': '2024-12-26',\n",
+       "  'time': '03:19:38',\n",
+       "  'user': 'Heross',\n",
+       "  'content': 'I of'},\n",
+       " {'date': '2024-12-26',\n",
+       "  'time': '03:19:48',\n",
+       "  'user': 'Heross',\n",
+       "  'content': \"I of 2017 is when I started my podcast, it was 90 days after I lost everything the last time, And from that point until now, it's\"},\n",
+       " {'date': '2024-12-26',\n",
+       "  'time': '03:19:58',\n",
+       "  'user': 'Heross',\n",
+       "  'content': \"I of 2017 is when I started my podcast, it was 90 days after I lost everything the last time, And from that point until now it's taken that period of time to get to over a million dollars a month. It actually three years and I was making multiple podcasts. We're talking three 400 episodes for the first few years,\"},\n",
+       " {'date': '2024-12-26',\n",
+       "  'time': '03:20:08',\n",
+       "  'user': 'Heross',\n",
+       "  'content': \"We're talking three 400 episodes for the first few years, I never really cracked. 3,000 downloads a month and so I could say Man why is this taking so long? But the real real is that it took me that long to get good.\"},\n",
+       " {'date': '2024-12-26',\n",
+       "  'time': '03:20:18',\n",
+       "  'user': 'Heross',\n",
+       "  'content': 'over a million dollars a month. 3,000 downloads a month and so I could say Man, why is this taking so long? But the real real is that it took me that long to get good. It also being extra real took me that long to have proof on the outside. That what I was saying was true on the inside and right now, no new listens to my podcast.'},\n",
+       " {'date': '2024-12-26',\n",
+       "  'time': '03:20:29',\n",
+       "  'user': 'Heross',\n",
+       "  'content': \"downloads a month and so I could say Man, why is this taking so long? But the real real is that it took me that long to get good. That what I was saying was true on the inside and right now, no one who listens to my podcast cares, that it took me seven years to get here. They just care that. It's good today. People, quit here when things get hard, because the thought of something being hard forever is unbearable.\"}]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "our_transcript_format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "fd68f315",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deepgram_transcript = \"{\\\"metadata\\\": {\\\"transaction_key\\\": \\\"deprecated\\\", \\\"request_id\\\": \\\"9b74e45b-5f9e-496c-9b23-c7cd7c355cb1\\\", \\\"sha256\\\": \\\"c0a1a27eec56b0ff2732e073cca69d1b5d382ac06533d7b57215d0a5ee4122ab\\\", \\\"created\\\": \\\"2025-01-08T10:13:15.934Z\\\", \\\"duration\\\": 168.42, \\\"channels\\\": 1, \\\"models\\\": [\\\"1ed36bac-f71c-4f3f-a31f-02fd6525c489\\\"], \\\"model_info\\\": {\\\"1ed36bac-f71c-4f3f-a31f-02fd6525c489\\\": {\\\"name\\\": \\\"general\\\", \\\"version\\\": \\\"2024-01-26.8851\\\", \\\"arch\\\": \\\"base\\\"}}}, \\\"results\\\": {\\\"channels\\\": [{\\\"alternatives\\\": [{\\\"transcript\\\": \\\"K. What's up? This is the test?\\\", \\\"confidence\\\": 0.7963867, \\\"words\\\": [{\\\"word\\\": \\\"k\\\", \\\"start\\\": 0.91999996, \\\"end\\\": 1.0799999, \\\"confidence\\\": 0.7910156, \\\"speaker\\\": 0, \\\"speaker_confidence\\\": 1.0, \\\"punctuated_word\\\": \\\"K.\\\"}, {\\\"word\\\": \\\"what's\\\", \\\"start\\\": 1.24, \\\"end\\\": 1.48, \\\"confidence\\\": 0.9941406, \\\"speaker\\\": 0, \\\"speaker_confidence\\\": 1.0, \\\"punctuated_word\\\": \\\"What's\\\"}, {\\\"word\\\": \\\"up\\\", \\\"start\\\": 1.48, \\\"end\\\": 1.64, \\\"confidence\\\": 0.5097656, \\\"speaker\\\": 0, \\\"speaker_confidence\\\": 1.0, \\\"punctuated_word\\\": \\\"up?\\\"}, {\\\"word\\\": \\\"this\\\", \\\"start\\\": 2.6799998, \\\"end\\\": 2.84, \\\"confidence\\\": 0.6533203, \\\"speaker\\\": 0, \\\"speaker_confidence\\\": 1.0, \\\"punctuated_word\\\": \\\"This\\\"}, {\\\"word\\\": \\\"is\\\", \\\"start\\\": 2.84, \\\"end\\\": 3.0, \\\"confidence\\\": 0.5205078, \\\"speaker\\\": 0, \\\"speaker_confidence\\\": 1.0, \\\"punctuated_word\\\": \\\"is\\\"}, {\\\"word\\\": \\\"the\\\", \\\"start\\\": 3.0, \\\"end\\\": 3.24, \\\"confidence\\\": 0.80810547, \\\"speaker\\\": 0, \\\"speaker_confidence\\\": 1.0, \\\"punctuated_word\\\": \\\"the\\\"}, {\\\"word\\\": \\\"test\\\", \\\"start\\\": 3.24, \\\"end\\\": 3.3999999, \\\"confidence\\\": 0.96875, \\\"speaker\\\": 0, \\\"speaker_confidence\\\": 1.0, \\\"punctuated_word\\\": \\\"test?\\\"}], \\\"paragraphs\\\": {\\\"transcript\\\": \\\"\\\\nSpeaker 0: K. What's up? This is the test?\\\", \\\"paragraphs\\\": [{\\\"sentences\\\": [{\\\"text\\\": \\\"K.\\\", \\\"start\\\": 0.91999996, \\\"end\\\": 1.0799999}, {\\\"text\\\": \\\"What's up?\\\", \\\"start\\\": 1.24, \\\"end\\\": 1.64}, {\\\"text\\\": \\\"This is the test?\\\", \\\"start\\\": 2.6799998, \\\"end\\\": 3.3999999}], \\\"speaker\\\": 0, \\\"num_words\\\": 7, \\\"start\\\": 0.91999996, \\\"end\\\": 3.3999999}]}}]}]}}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "1b8a7304",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deepgram_transcript = json.loads(deepgram_transcript)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "16da1934",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'sentences': [{'text': 'K.', 'start': 0.91999996, 'end': 1.0799999},\n",
+       "   {'text': \"What's up?\", 'start': 1.24, 'end': 1.64},\n",
+       "   {'text': 'This is the test?', 'start': 2.6799998, 'end': 3.3999999}],\n",
+       "  'speaker': 0,\n",
+       "  'num_words': 7,\n",
+       "  'start': 0.91999996,\n",
+       "  'end': 3.3999999}]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "deepgram_transcript['results']['channels'][0]['alternatives'][0]['paragraphs']['paragraphs']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "b99ec00f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'metadata': {'transaction_key': 'deprecated',\n",
+       "  'request_id': '9b74e45b-5f9e-496c-9b23-c7cd7c355cb1',\n",
+       "  'sha256': 'c0a1a27eec56b0ff2732e073cca69d1b5d382ac06533d7b57215d0a5ee4122ab',\n",
+       "  'created': '2025-01-08T10:13:15.934Z',\n",
+       "  'duration': 168.42,\n",
+       "  'channels': 1,\n",
+       "  'models': ['1ed36bac-f71c-4f3f-a31f-02fd6525c489'],\n",
+       "  'model_info': {'1ed36bac-f71c-4f3f-a31f-02fd6525c489': {'name': 'general',\n",
+       "    'version': '2024-01-26.8851',\n",
+       "    'arch': 'base'}}},\n",
+       " 'results': {'channels': [{'alternatives': [{'transcript': \"K. What's up? This is the test?\",\n",
+       "      'confidence': 0.7963867,\n",
+       "      'words': [{'word': 'k',\n",
+       "        'start': 0.91999996,\n",
+       "        'end': 1.0799999,\n",
+       "        'confidence': 0.7910156,\n",
+       "        'speaker': 0,\n",
+       "        'speaker_confidence': 1.0,\n",
+       "        'punctuated_word': 'K.'},\n",
+       "       {'word': \"what's\",\n",
+       "        'start': 1.24,\n",
+       "        'end': 1.48,\n",
+       "        'confidence': 0.9941406,\n",
+       "        'speaker': 0,\n",
+       "        'speaker_confidence': 1.0,\n",
+       "        'punctuated_word': \"What's\"},\n",
+       "       {'word': 'up',\n",
+       "        'start': 1.48,\n",
+       "        'end': 1.64,\n",
+       "        'confidence': 0.5097656,\n",
+       "        'speaker': 0,\n",
+       "        'speaker_confidence': 1.0,\n",
+       "        'punctuated_word': 'up?'},\n",
+       "       {'word': 'this',\n",
+       "        'start': 2.6799998,\n",
+       "        'end': 2.84,\n",
+       "        'confidence': 0.6533203,\n",
+       "        'speaker': 0,\n",
+       "        'speaker_confidence': 1.0,\n",
+       "        'punctuated_word': 'This'},\n",
+       "       {'word': 'is',\n",
+       "        'start': 2.84,\n",
+       "        'end': 3.0,\n",
+       "        'confidence': 0.5205078,\n",
+       "        'speaker': 0,\n",
+       "        'speaker_confidence': 1.0,\n",
+       "        'punctuated_word': 'is'},\n",
+       "       {'word': 'the',\n",
+       "        'start': 3.0,\n",
+       "        'end': 3.24,\n",
+       "        'confidence': 0.80810547,\n",
+       "        'speaker': 0,\n",
+       "        'speaker_confidence': 1.0,\n",
+       "        'punctuated_word': 'the'},\n",
+       "       {'word': 'test',\n",
+       "        'start': 3.24,\n",
+       "        'end': 3.3999999,\n",
+       "        'confidence': 0.96875,\n",
+       "        'speaker': 0,\n",
+       "        'speaker_confidence': 1.0,\n",
+       "        'punctuated_word': 'test?'}],\n",
+       "      'paragraphs': {'transcript': \"\\nSpeaker 0: K. What's up? This is the test?\",\n",
+       "       'paragraphs': [{'sentences': [{'text': 'K.',\n",
+       "           'start': 0.91999996,\n",
+       "           'end': 1.0799999},\n",
+       "          {'text': \"What's up?\", 'start': 1.24, 'end': 1.64},\n",
+       "          {'text': 'This is the test?', 'start': 2.6799998, 'end': 3.3999999}],\n",
+       "         'speaker': 0,\n",
+       "         'num_words': 7,\n",
+       "         'start': 0.91999996,\n",
+       "         'end': 3.3999999}]}}]}]}}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "deepgram_transcript"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "fb6d9f2d",
+   "id": "db9615d2",
    "metadata": {},
    "outputs": [],
    "source": []
